# RED-QUOTAS

./: README.md  docker-compose.yml
backend/: Dockerfile  requirements.txt  worker.py
backend/app/: config.py  job_manager.py  main.py  models.py  red_processor.py
docs/: API_SPEC.md  ARCHITECTURE.md  VULKAN_PIPELINE.md
frontend/: index.html  package.json
frontend/src/: App.tsx  api.ts
frontend/src/pages/: JobDetail.tsx  Jobs.tsx  Upload.tsx
frontend/src/styles/: index.css
vulkan/: CMakeLists.txt
vulkan/include/: frame_pipeline.h  red_framework.h  shader_compiler.h  simd_processor.h  vulkan_engine.h
vulkan/src/: frame_pipeline.cpp  shader_compiler.cpp  simd_processor.cpp  vulkan_engine.cpp
vulkan/tests/: CMakeLists.txt  test_vulkan.cpp
